# ku

./: Cargo.toml  LICENCE  README.md
src/: main.rs  tools.rs
src/codex/: mod.rs  predictive.rs  simple.rs
src/commands/: decode.rs  encode.rs  mod.rs  solve.rs
src/errors/: mod.rs
src/solver/: board.rs  calc.rs  mod.rs  solve.rs
