[package]
name = "ku"
version = "0.1.0"
edition = "2018"
license = "MIT"
license-file = "LICENCE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
ncurses = "5.101.0"
bit-vec = "0.6"
regex = "1.5.4"
clap = "2.33.3"
