[package]
name = "ku"
version = "0.1.0"
edition = "2018"
authors = ["edave64"]
license-file = "LICENCE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = "2.33.3"
